--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+
+	<head>
+		<link data-turbolinks-track="true" href="style.css" media="all" rel="stylesheet" />
+	</head>
+
+	<body>
+		<div class="container">
+			<h1>Austin Chen</h1>
+		</div>
+	</body>
+</html>
