--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-
-	<head>
-		<link data-turbolinks-track="true" href="style.css" media="all" rel="stylesheet" />
-	</head>
-
-	<body>
-		<div class="container">
-			<h1>Austin Chen</h1>
-		</div>
-	</body>
-</html>
+Hello World
