--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 
 	<head>
 		<link data-turbolinks-track="true" href="style.css" media="all" rel="stylesheet" />
+		<!-- Paper.js Load -->
+		<script type="text/javascript" src="js/paper-full.min.js"></script>
 	</head>
 
 	<body>
 		<div class="container">
 			<h1>Austin Chen</h1>
+			<div class="social-links">
+				<a href="http://www.facebook.com/austinc88">
+					<img alt="Facebook" class="socialbutton" height="30px" src="assets/facebook.png">
+				</a>
+				<a href="http://www.github.com/austinc88">
+					<img alt="Github" height="30px" id="github" src="assets/github.png">
+				</a>
+				<a href="http://www.linkedin.com/in/austinchenyw">
+					<img alt="Linkedin" class="socialbutton" height="30px" src="assets/linkedin.png">
+				</a>
+			</div>
 		</div>
+
+		
 	</body>
 </html>
