I don't like periods anymore

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<div class="container">
-			<h1>Austin Chen.</h1>
+			<h1>Austin Chen</h1>
 			<div class="social-links">
 				<a href="http://www.facebook.com/austinc88">
 					<img alt="Facebook" class="socialbutton" height="30px" src="assets/facebook.png">
