--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<canvas id="canvas" resize="true"></canvas>
 		<div class="container">
 			<h1>Austin Chen</h1>
+			<h5>Dental Student. Software Engineer</h5>
 			<div class="social-links">
 				<a href="http://www.facebook.com/austinc88">
 					<img alt="Facebook" class="socialbutton" height="30px" src="assets/facebook.png">
